Fixed spacing

--- a/style.css
+++ b/style.css
@@ -54,8 +54,8 @@ ul {
   margin: 0;
 }
 h1 {
-  margin-top: 50px;
-  margin-bottom: 50px;
+  margin-top: 72px;
+  margin-bottom: 24px;
   font-family: 'Codystar', cursive;
   font-size: 48px;
 }
